--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,9 @@ dependencies {
     implementation libs.material
     implementation libs.activity
     implementation libs.constraintlayout
+    implementation libs.room.runtime
+    annotationProcessor libs.room.compiler
+    androidTestAnnotationProcessor libs.room.testing
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
