Create recycler for VacationListActivity

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation libs.activity
     implementation libs.constraintlayout
     implementation libs.room.runtime
+    implementation libs.recyclerview
     annotationProcessor libs.room.compiler
     androidTestAnnotationProcessor libs.room.testing
     testImplementation libs.junit
