--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,15 @@
         android:theme="@style/Theme.VacationPlanner"
         tools:targetApi="31">
         <activity
-            android:name=".ui.EditVacationActivity"
-            android:label="Edit Vacation"
-            android:parentActivityName=".ui.VacationListActivity"
+            android:name=".ui.EditExcursionActivity"
+            android:label="Edit Excursion"
+            android:parentActivityName=".ui.ExcursionDetailActivity"
             android:exported="false" />
+        <activity
+            android:name=".ui.EditVacationActivity"
+            android:exported="false"
+            android:label="Edit Vacation"
+            android:parentActivityName=".ui.VacationListActivity" />
         <activity
             android:name=".ui.ExcursionDetailActivity"
             android:exported="false"
