--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,11 +13,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.VacationPlanner"
         tools:targetApi="31">
+        <receiver
+            android:name=".ui.MyReceiver"
+            android:enabled="true"
+            android:exported="true"></receiver>
+
         <activity
             android:name=".ui.EditExcursionActivity"
+            android:exported="false"
             android:label="Edit Excursion"
-            android:parentActivityName=".ui.ExcursionDetailActivity"
-            android:exported="false" />
+            android:parentActivityName=".ui.ExcursionDetailActivity" />
         <activity
             android:name=".ui.EditVacationActivity"
             android:exported="false"
