--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,9 @@
         android:theme="@style/Theme.VacationPlanner"
         tools:targetApi="31">
         <receiver
-            android:name=".ui.MyReceiver"
+            android:name=".ui.receiver.MyReceiver"
             android:enabled="true"
-            android:exported="true"></receiver>
+            android:exported="true" />
 
         <activity
             android:name=".ui.EditExcursionActivity"
@@ -32,11 +32,6 @@
             android:name=".ui.ExcursionDetailActivity"
             android:exported="false"
             android:label="Excursion Details"
-            android:parentActivityName=".ui.ExcursionListActivity" />
-        <activity
-            android:name=".ui.ExcursionListActivity"
-            android:exported="false"
-            android:label="Excursions"
             android:parentActivityName=".ui.VacationDetailActivity" />
         <activity
             android:name=".ui.VacationDetailActivity"
