--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,6 +14,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.VacationPlanner"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.SearchActivity"
+            android:label="Search Results"
+            android:exported="false"
+            android:parentActivityName=".ui.VacationListActivity">
+
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+
+        </activity>
+
         <receiver
             android:name=".ui.receiver.MyReceiver"
             android:enabled="true"
@@ -41,7 +58,12 @@
         <activity
             android:name=".ui.VacationListActivity"
             android:exported="false"
-            android:label="Vacations" />
+            android:label="Vacations"
+            android:launchMode="singleTop"
+            android:parentActivityName=".ui.MainActivity">
+            <meta-data android:name="android.app.default_searchable"
+                android:value=".ui.SearchActivity" />
+        </activity>
         <activity
             android:name=".ui.MainActivity"
             android:exported="true"
