Adjust formatting of ReportActivity

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation libs.constraintlayout
     implementation libs.room.runtime
     implementation libs.recyclerview
+    implementation 'com.github.evrencoskun:TableView:v0.8.9.4'
     annotationProcessor libs.room.compiler
     androidTestAnnotationProcessor libs.room.testing
     testImplementation libs.junit
