--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,8 @@ constraintlayout = "2.1.4"
 recyclerview = "1.3.2"
 roomRuntime = "2.6.1"
 firebaseCrashlyticsBuildtools = "3.0.2"
+securityCryptoKtx = "1.1.0-alpha06"
+tableview = "v0.8.9.4"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -24,6 +26,8 @@ room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomRun
 room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
 room-testing = { module = "androidx.room:room-testing", version.ref = "roomRuntime" }
 firebase-crashlytics-buildtools = { group = "com.google.firebase", name = "firebase-crashlytics-buildtools", version.ref = "firebaseCrashlyticsBuildtools" }
+security-crypto-ktx = { module = "androidx.security:security-crypto-ktx", version.ref = "securityCryptoKtx" }
+tableview = { module = "com.github.evrencoskun:TableView", version.ref = "tableview" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
